Bug 63914 - SVGAnimateTransform does not support calcMode=discrete
Summary: SVGAnimateTransform does not support calcMode=discrete
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Dirk Schulze
URL:
Keywords:
Depends on: 64104
Blocks: 41761 37250
  Show dependency treegraph
 
Reported: 2011-07-04 11:20 PDT by Dirk Schulze
Modified: 2011-07-07 13:17 PDT (History)
2 users (show)

See Also:


Attachments
Patch (2.21 KB, patch)
2011-07-07 12:24 PDT, Dirk Schulze
rwlbuis: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dirk Schulze 2011-07-04 11:20:19 PDT
SVGAnimateTransform does not support calcMode=discrete. I have a fix here, just unsure how to test. The animation testing API seems to be unstable for animateTransform. Sometimes the animation does not affect the transform of the target element.
Comment 1 Dirk Schulze 2011-07-07 10:02:28 PDT
Can't create a regression test, see bug 64104.
Comment 2 Dirk Schulze 2011-07-07 12:24:36 PDT
Created attachment 100017 [details]
Patch
Comment 3 Rob Buis 2011-07-07 12:51:50 PDT
Comment on attachment 100017 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=100017&action=review

Ok with some comments that you need to fix before landing.

> Source/WebCore/ChangeLog:8
> +        Apply transform at 0% of animation if current percentage is smaller than 0.5 and at 100% if not.

Could be made more clear, you could start with Implement calcMode=discrete by... This sounds like a programmer speaking :) Try to incorporate the "This specifies that the animation function will jump from one value to the next without any interpolation." and why 0.5 was chosen.

> Source/WebCore/ChangeLog:10
> +        Added a manual test. DRT crashes on an automated test with the SVG animation API. Opened a new bug report: 64104.

Could add the tracking bug for the animation framework problem.

> Source/WebCore/manual-tests/svg-animateTransform-calcMode-discrete.svg:2
> +<text x="10" y="20">Testing calcMode="discrete" for &lt;animateTransform&gt;. The rect should move without an interpoalted translation after 2s.</text>

interpoalted? Maybe reword a bit, maybe you can just use "jump" like in the spec definition.
Comment 4 Dirk Schulze 2011-07-07 13:17:22 PDT
Committed r90585: <http://trac.webkit.org/changeset/90585>